k8s/saratube-app/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: saratube-service
  namespace: saratube-app
spec:
  clusterIP: 10.43.40.15
  clusterIPs:
  - 10.43.40.15
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: saratube-app
  sessionAffinity: None
  type: ClusterIP
